# Nlife

./: .dockerignore  .env.vercel.template  .gitignore  .lighthouserc.json  AUDIOGRAM_MAKER_IMPLEMENTATION.md  BUGS_AND_HALLUCINATIONS_REPORT.md  CAMPAIGN_SUMMARY.md  CLAUDE.md  COMPARISON_PAGES_COMPLETE.md  COMPARISON_PAGES_SUMMARY.md  DEBUGGING_SUMMARY.md  DEPLOYMENT.md  FIXES_IMPLEMENTATION_SUMMARY.md  GEO_ITERATIVE_LOOP_PROTOCOL.md  GEO_VICTORY_IMPLEMENTATION.md  HAMBREDEVICTORIA_INITIAL_REPORT.md  HAMBREDEVICTORIA_MASTER_REPORT.md  HAMBREDEVICTORIA_VICTORY_REPORT.md  HOOKS_PATTERNS.md  IMPLEMENTATION_PLAN.md  INSTALLATION_AND_DEPENDENCIES.md  INTEGRATION_PLAN.md  INTERNAL_LINKING_VICTORY.md  INTERNATIONAL_GEO_VICTORY.md  ITERATION_INDEX.md  LANDING_PAGES_VICTORY.md  NLIFE_AUDIT_REPORT_2026-02-01.txt  PERFORMANCE_OPTIMIZATION_REPORT.md  PILLAR_PAGES_SUMMARY.md  PLAYWRIGHT_TEST_RESULTS.md  PROJECT_PHASES_ANALYSIS.md  QUICK_REFERENCE.md  QUICK_START_VERIFIED.md  README.md  RELATED_TOOLS_IMPLEMENTATION.md  REPOSITORY.md  REVIEW_TESTIMONIAL_VICTORY.md  SCHEMA_MARKUP_VICTORY.md  SEO_GEO_Audit_Report.md  STATS_IMPLEMENTATION_SUMMARY.md  (+19 more)
.github/: CI_CD_DOCUMENTATION.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml  lighthouserc.json
.workertasks/: COMANDOS_TERMINAL.txt  MASTER_REPORTE_AUDITORIA.txt  README.md  SECURITY_FIXES_APPLIED.md  (+9 more)
_local_changes_backup_2026-01-24_035659/agents/newlife-agents/: .env.example  main.py  pyproject.toml
_local_changes_backup_2026-01-24_035659/agents/newlife-agents/src/newlife_agents/: __init__.py  agents.py  crew.py  main.py  tasks.py
(+583 files in other folders)
