[project]
name = "newlife-agents"
version = "0.1.0"
description = "CrewAI multi-agent system for automated feature development in New Life Solutions"
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai>=1.8.0",
    "crewai-tools>=1.8.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
newlife-agents = "newlife_agents.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/newlife_agents"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]
